Moved packages around, renamed some files and packages, following latest Spring Security standards.